# tinyRasterizer

./: CMakeLists.txt  TestClass.h  main.cpp
